# cnoid_tank_pkgs

./: LICENSE  README.md  dependencies.repos  melodic.rosinstall  noetic.rosinstall
cnoid_tank_bringup/: CMakeLists.txt  package.xml
cnoid_tank_bringup/launch/: choreonoid.launch  display.launch  rtf_plant.launch
cnoid_tank_bringup/launch/config/: display.rviz
cnoid_tank_bringup/model/: TankBody.body
cnoid_tank_bringup/project/Labo/: Tank.cnoid
cnoid_tank_bringup/project/RTFPlant/: Tank.cnoid
cnoid_tank_control/: CMakeLists.txt  package.xml
cnoid_tank_control/config/: base_control.yaml  cnoid_tank_diff_drive_control.yaml  cnoid_tank_effort_control.yaml  cnoid_tank_joint_state_control.yaml  cnoid_tank_position_control.yaml  cnoid_tank_velocity_control.yaml  turret_effort_control.yaml  turret_position_control.yaml
cnoid_tank_control/launch/: control.launch
cnoid_tank_description/: CMakeLists.txt  package.xml
cnoid_tank_description/launch/: display.launch
cnoid_tank_description/launch/config/: display.rviz
cnoid_tank_description/meshes/: CHASSIS.dae  KINECT.dae  TRACK_L.dae  TRACK_R.dae  TURRET_P.dae  TURRET_Y.dae  WHEEL.dae
cnoid_tank_description/urdf/: cnoid_tank.urdf.xacro  cnoid_tank_basic.urdf.xacro  common.xacro  torso.urdf.xacro  track.urdf.xacro
cnoid_tank_pkgs/: CMakeLists.txt  package.xml
