<?xml version="1.0"?>
<package format="2">
  <name>cnoid_tank_control</name>
  <version>1.0.0</version>
  <description>The cnoid_tank_control package</description>

  <maintainer email="groadpg@gmail.com">Ryodo Tanaka</maintainer>
  <license>MIT</license>
  
  <author email="groadpg@gmail.com">RyodoTanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>

</package>
