<?xml version="1.0"?>
<package format="2">
  <name>cnoid_tank_description</name>
  <version>1.0.0</version>
  <description>The Tank description package</description>

  <maintainer email="groadpg@gmail.com">Ryodo Tanaka</maintainer>
  <license>MIT</license>

  <author email="groadpg@gmail.com">RyodoTanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>

</package>
