<?xml version="1.0"?>
<package format="2">
  <name>cnoid_tank_pkgs</name>
  <version>0.0.0</version>
  <description>The cnoid_tank_pkgs package</description>

  <maintainer email="groadpg@gmail.com">Ryodo Tanaka</maintainer>
  <author email="groadpg@gmail.com">Ryodo Tanaka</author>
  
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cnoid_tank_bringup</exec_depend>
  <exec_depend>cnoid_tank_control</exec_depend>
  <exec_depend>cnoid_tank_description</exec_depend>
  
  <export>
    <metapackage/>
  </export>
  
</package>
